# ipv6_trials

./: .gitignore  LICENSE
bbridge/: cloud.c  coordinator.c  gpxlogger.c  lcd.c  list.h  manage  rtkPosition.c  rtkPosition.h  sensorNode.c  sensorNode.h
bbridge/inc/: cloud.h  gpxlogger.h  lcd.h  makefile  rtkPosition.h  sensorNode.h
bbridge/src/: cloud.c  coordinator.c  gpxlogger.c  lcd.c  sensorNode.c
centralServer/configFile/: config.json
centralServer/docs/: ModulTasarim.docx
centralServer/inc/: cfg.h  list.h  msgformat.h  pack.h
centralServer/src/: cJSON.c  center.c  cfg.c  list.c  makefile  manager  msgformat.c  pack.c  serverThreaded.c
centralServer/test/: cJSON.c  cfg.c  clientApp  clientApp.c  clientSnmp  clientSnmp.c  makefile  msgformat.c
cloudServer/: cloud  insert.sh  makefile  rawData.sql  select.sh  singlePoint.txt
cloudServer/databaseRelated/: delete.sh  delete.sql  insert.sh  insert.sql  insert2.sql  insert3.sql  insert4.sql  multiLineString.txt  select.sql  select_partial.sh  select_partial.sql
cloudServer/src/: sensor.c  server.c  server2.c
cloudServer/test/: client2.c  list.c  makefile  test-client
gpsd/gpsd_src/: get_llh.c  (+2 more)
gpsd/gpstest-0.1/: Makefile.am  Makefile.in  README  configure  configure.ac
gpsd/gpstest-0.1/logs/: Makefile.am  Makefile.in
gpsd/gpstest-0.1/src/: Makefile.am  Makefile.in  config.h  config.h.in  gps_example.c
ipv4_server_client/: client  client2  client2.c  server  server2  server2.c
serial/: build.sh  serial  serial.c
trial6_ipv6/: client  client.c  client.c.backup  clienttt  server  server.c
(+15 files in other folders)
